# clusterator

./: .gitignore  Dockerfile  LICENSE  Makefile.am  NEWS  README.md  configure.ac  distbin
debian/: README  README.Debian  README.source  changelog  control  copyright  postinst  postrm  preinst  prerm
lib/: Makefile.am
src/: Makefile.am  cluster-start  create-machines  create-machines.sh  destroy-machines  destroy-machines.sh  dev-helper.sh  docker-compose.yml  docker-machines  start-consul  start-consul.sh
